force-app/main/default/objects/Negoptim__Country_List__c/fields/Negoptim__Country_ISO2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Country_ISO2__c</fullName>
    <label>ISO2 Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>