force-app/main/default/objects/Negoptim__Country_List__c/fields/Negoptim__Country_ISO3__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Country_ISO3__c</fullName>
    <label>ISO3 Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>