force-app/main/default/objects/Negoptim__Country_List__c/fields/Negoptim__ISO2_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ISO2_Code__c</fullName>
    <label>ISO2 Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>