force-app/main/default/objects/Negoptim__Country_List__c/fields/Negoptim__VAT_Linked_Country__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__VAT_Linked_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For example, MONACO has got same VAT as FRANCE, so for MONACO, VAT Linked Country will be FRANCE.</description>
    <label>VAT Linked Country</label>
    <referenceTo>Negoptim__Country_List__c</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Countries</relationshipName>
    <type>Lookup</type>
</CustomField>