force-app/main/default/objects/Negoptim__Country_List__c/listViews/Negoptim__All.listView-meta.xml
<ListView>
    <fullName>Negoptim__All</fullName>
    <columns>Negoptim__Country_Code__c</columns>
    <columns>NAME</columns>
    <columns>Negoptim__ISO2_Code__c</columns>
    <columns>Negoptim__ISO3_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>