force-app/main/default/objects/Negoptim__Country_List__c/listViews/Negoptim__All1.listView-meta.xml
<ListView>
    <fullName>Negoptim__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>